--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,8 @@
     "react-map-gl": "^4.0.9",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
-    "subscriptions-transport-ws": "^0.9.15"
+    "subscriptions-transport-ws": "^0.9.15",
+    "worker-loader": "^3.0.8"
   },
   "scripts": {
     "now-build": "react-scripts build",
