--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,9 @@
     "mongoose": "^5.4.6"
   },
   "devDependencies": {
+    "eslint": "^8.5.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.25.3",
     "nodemon": "^1.18.10"
   }
 }
