--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^2.3.1",
+    "bcrypt": "^5.0.1",
     "dotenv": "^6.2.0",
     "google-auth-library": "^3.0.1",
     "graphql": "^14.1.1",
