--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@accounts/apollo-link": "^0.32.1",
+    "@accounts/client-password": "^0.32.2",
+    "@accounts/graphql-client": "^0.33.1",
+    "@apollo/client": "^3.5.6",
     "@material-ui/core": "^4.12.2",
     "@material-ui/icons": "^4.11.2",
     "apollo-cache-inmemory": "^1.4.2",
@@ -20,7 +24,7 @@
     "react-dom": "^16.8.0-alpha.1",
     "react-google-login": "^5.0.0",
     "react-map-gl": "^4.0.9",
-    "react-router-dom": "^4.3.1",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "2.1.3",
     "subscriptions-transport-ws": "^0.9.15",
     "worker-loader": "^3.0.8"
